--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "folio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://n7layla.github.io/folio",
+  "homepage": "http://laylawrote.com/",
   "dependencies": {
     "gh-pages": "^1.1.0",
     "material-ui": "^0.19.4",
